[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/hud/playerDied.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/label_large.tres" type="DynamicFont" id=2]

[node name="playerDied" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -34.0
margin_right = 224.0
margin_bottom = 75.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 425.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 425.0
margin_bottom = 116.0
custom_constants/separation = 20

[node name="restartBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 280.0
margin_bottom = 51.0
rect_min_size = Vector2( 280, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Play Again"

[node name="quitBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 425.0
margin_bottom = 51.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/restartBtn" to="." method="_on_restartBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/quitBtn" to="." method="_on_quitBtn_pressed"]
